scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/jsDeclarationsExportFormsErr.errors.txt
bar.js(1,1): error TS8002: 'import ... =' can only be used in TypeScript files.
bar.js(2,1): error TS8003: 'export =' can only be used in TypeScript files.
globalNs.js(2,1): error TS1315: Global module exports may only appear in declaration files.


==== cls.js (0 errors) ====
    export class Foo {}
    
==== bar.js (2 errors) ====
    import ns = require("./cls");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    export = ns; // TS Only
    ~~~~~~~~~~~~
!!! error TS8003: 'export =' can only be used in TypeScript files.
    
==== bin.js (0 errors) ====
    import * as ns from "./cls";
    module.exports = ns; // We refuse to bind cjs module exports assignments in the same file we find an import in
    
==== globalNs.js (1 errors) ====
    export * from "./cls";
    export as namespace GLO; // TS Only
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1315: Global module exports may only appear in declaration files.
    
==== includeAll.js (0 errors) ====
    import "./bar";
    import "./bin";
    import "./globalNs";
    